
Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

16-Dec-2011 Jean-Marie Simonet
 $ Updating installation ini files bs-BA, da-DK, de-DE, es-ES, et-EE, hr-HR, mk-MK, nb-NO, sv-SE, en-US, en-AU
 $ Updating installation ini files fr-FR
 $ Updating installation ini files bg-BG, lv-LV, nn-NO, ro-RO, sr-RS, sr-YU, ta-IN, th-TH

16-Dec-2011 Christophe Demko
 # [#27392] MenusHelper::getAssociations() returns invalid data if no associations
 # [#27391] *Alternate meta tags for multilingual sites (Dennis Hermatski)
 # [#27395] another strict when click on image tab in editor area
 # [#26100] com_media image button upload using file_path not image_path param for base path** (Rune Sjøen)
 ^ [#23125] * "Select a Menu Item Type" in modal box in menu item edit page (Dennis Hermatski)
 # [#27398] *Strict standards BannersModelBanners::getItems()

15-Dec-2011 Mark Dexter
 # [#26672] Add a check for native ZIP support to the Installation

15-Dec-2011 Christophe Demko
 # [#27382] Add appropriatestyling to system debug plugin (Andrea Tarr)

15-Dec-2011 Jean-Marie Simonet
 # [#27393] undefined $option com_media
 # [#27137] End of line inconsistencies. Thanks Ed.

14-Dec-2011 Jean-Marie Simonet
 # [#27383] PHP 5.3 Strict Mode complains about Strict Standards on some methods. Thanks Jean-Claude

13-Dec-2011 Christophe Demko
 - [#26581] Link to users profiles on latest user and whos online (Denise McLaurin)
 + [#27292] *Implementing image option for the offline.php default page (Jean-Marie Simonet)

13-Dec-2011 Mark Dexter
 # [#27295] Start fading out the use of deprecated platform APIs

12-Dec-2011 Christophe Demko
 # [#25997] Fix missing article itemid in com_contact

11-Dec-2011 Jean-Marie Simonet
 # [#27376] Fix: Debug plugin reloaded. Thanks Nikolai
 $ [#27308] Backend or back-end (Jennifer Marriott)

10-Dec-2011 Christophe Demko
 # [#26589] unexpected behaviour in RSS with feed email (Brian Teeman)