@@ -31,6 +31,7 @@ $ -> Language fix or change
  $ Updating installation ini files bs-BA, da-DK, de-DE, es-ES, et-EE, hr-HR, mk-MK, nb-NO, sv-SE, en-US, en-AU
  $ Updating installation ini files fr-FR
  $ Updating installation ini files bg-BG, lv-LV, nn-NO, ro-RO, sr-RS, sr-YU, ta-IN, th-TH
+ - Removing redundqnt joomla_update sql
 
 16-Dec-2011 Christophe Demko
  # [#27392] MenusHelper::getAssociations() returns invalid data if no associations
